F12 rendering creates artifacts on geometry created with Screw Modifier #37691

Closed
opened 2013-12-03 15:05:35 +01:00 by Voyager Voyager · 10 comments

System Information
Windows 7, 64bit, GeForce GT 555M

Blender Version
Broken: Blender Blender 2.69 r60995

Short description of error
There is incostency between viewport shading and rendering where viewport shading is correct whilst rendering creates artifacts on geometry created with Screw Modifier.

Exact steps for others to reproduce the error
Attached image shows differences between viewport shading (on the left side) and F12 rendering. I suppose it may be the problem with normals. Disabling Smooth Shading in Screw Modifier solves the problem.cycles_screw_bug.blend

cycles_screw_bug.jpg

**System Information** Windows 7, 64bit, GeForce GT 555M **Blender Version** Broken: Blender Blender 2.69 r60995 **Short description of error** There is incostency between viewport shading and rendering where viewport shading is correct whilst rendering creates artifacts on geometry created with Screw Modifier. **Exact steps for others to reproduce the error** Attached image shows differences between viewport shading (on the left side) and F12 rendering. I suppose it may be the problem with normals. Disabling Smooth Shading in Screw Modifier solves the problem.[cycles_screw_bug.blend](https://archive.blender.org/developer/F36194/cycles_screw_bug.blend) ![cycles_screw_bug.jpg](https://archive.blender.org/developer/F36195/cycles_screw_bug.jpg)

Changed status to: 'Open'

Changed status to: 'Open'
Brecht Van Lommel was assigned by Voyager Voyager 2013-12-03 15:05:35 +01:00

Added subscriber: @voyagercgi

Added subscriber: @voyagercgi

Even in the viewport there is a black spot in the middle of this mesh, something wrong with the modifier probably.

Even in the viewport there is a black spot in the middle of this mesh, something wrong with the modifier probably.

Yes, IMO it's not the problem of Cycles itself but screw modifier. After applying the modifier the problem still exist but when you go to edit mode and again to object mode Cycles has no problem at all. As I stated before the culprit is probably not calculated properly normals.

Yes, IMO it's not the problem of Cycles itself but screw modifier. After applying the modifier the problem still exist but when you go to edit mode and again to object mode Cycles has no problem at all. As I stated before the culprit is probably not calculated properly normals.
Brecht Van Lommel was unassigned by Campbell Barton 2013-12-18 20:24:43 +01:00
Campbell Barton self-assigned this 2013-12-18 20:24:43 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

screw shouldn't be creating zero length normals, claiming this one.

screw shouldn't be creating zero length normals, claiming this one.

This issue was referenced by blender/blender-addons-contrib@d7033d5637

This issue was referenced by blender/blender-addons-contrib@d7033d56371e1cb4dc9b8e6fc8732affe3d50d60

This issue was referenced by d7033d5637

This issue was referenced by d7033d56371e1cb4dc9b8e6fc8732affe3d50d60

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d7033d5637.

Closed by commit d7033d5637.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37691
No description provided.