Fix T37691: Screw modifier created zero length normals